--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,101 @@
 <head>
   <title>Secure Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 420px;
+      margin: auto;
+      padding: 12px;
+    }
+
+    h3 {
+      text-align: center;
+      margin-bottom: 12px;
+    }
+
+    input, button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 8px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 15px;
+    }
+
+    button {
+      background: #000;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:active {
+      opacity: 0.85;
+    }
+
+    #chat {
+      display: none;
+      margin-top: 15px;
+    }
+
+    .messages {
+      background: #fff;
+      border-radius: 8px;
+      padding: 10px;
+      height: 320px;
+      overflow-y: auto;
+      margin-bottom: 10px;
+    }
+
+    .msg {
+      max-width: 75%;
+      padding: 8px 12px;
+      border-radius: 14px;
+      margin-bottom: 8px;
+      font-size: 14px;
+      word-wrap: break-word;
+    }
+
+    .me {
+      background: #dcf8c6;
+      margin-left: auto;
+      border-bottom-right-radius: 4px;
+    }
+
+    .other {
+      background: #eee;
+      margin-right: auto;
+      border-bottom-left-radius: 4px;
+    }
+  </style>
 </head>
 
-<body style="font-family:sans-serif;max-width:420px;margin:auto;padding:10px">
+<body>
+  <div class="container">
+    <h3>🔐 Secure Chat</h3>
 
-<h3>🔐 Secure Chat</h3>
+    <!-- Login -->
+    <input id="room" placeholder="Room ID">
+    <input id="password" type="password" placeholder="Secret Password">
+    <button onclick="join()">Join Room</button>
 
-<input id="room" placeholder="Room ID" style="width:100%;padding:10px"><br><br>
-<input id="password" type="password" placeholder="Secret Password" style="width:100%;padding:10px"><br><br>
-<button onclick="join()" style="width:100%;padding:12px">Join Room</button>
+    <!-- Chat -->
+    <div id="chat">
+      <div class="messages" id="messages"></div>
+      <input id="msg" placeholder="Type message">
+      <button onclick="sendMsg()">Send</button>
+    </div>
+  </div>
 
-<div id="chat" style="display:none">
-  <hr>
-  <input id="msg" placeholder="Type message" style="width:100%;padding:10px">
-  <button onclick="sendMsg()" style="width:100%;padding:12px;margin-top:5px">Send</button>
-  <ul id="messages"></ul>
-</div>
-
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
